force-app/main/default/objects/Moneda_cotizacion__c/Moneda_cotizacion__c.object-meta.xml
<CustomObject>
    <label>Moneda cotización</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Nombre de Moneda cotización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Moneda cotizaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>