force-app/main/default/objects/Moneda_cotizacion__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <label>Cotización</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>