force-app/main/default/objects/Moneda_cotizacion__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Moneda cotizaciones</relationshipLabel>
    <relationshipName>Moneda_cotizaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>