force-app/main/default/objects/Moneda_cotizacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Moneda__c</columns>
    <columns>Fecha__c</columns>
    <columns>Cotizacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>